<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo launch dosyaları</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo Classic entegrasyonu -->
  <depend>gazebo_ros</depend>
  <!-- Sahte sensör node'u için -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_interfaces</depend>
  <!-- SLAM ve lokalizasyon -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <build_depend>robot_description</build_depend>
  <exec_depend>robot_description</exec_depend>
  <build_depend>robot_control</build_depend>
  <exec_depend>robot_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
